style: разделить стримы на отдельные блоки